@@ -15,6 +15,7 @@ Version dev-4.1 (expected 26/02/2012)
     * Create dbcreate.php account functions to enable new accounts
     * Create dyrki/tools.php class with dbcreate.php code
     * Rename dbcreate.php in tools.php
+    * Add follow function to tool.php
 
 Version 4.0 (25/02/2012)
     * Removed all unused files
